[gd_scene load_steps=6 format=2]

[ext_resource path="res://weapons/weapon_pickup.gd" type="Script" id=1]
[ext_resource path="res://fonts/VT323-Regular_16.tres" type="DynamicFontData" id=2]
[ext_resource path="res://fonts/VT323-Regular_8.tres" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 8
font_data = ExtResource( 3 )

[node name="WeaponPickup" type="Node2D" groups=[
"pickups",
]]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

[node name="InteractArea" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractArea"]

[node name="DisplayBG" type="ColorRect" parent="."]
margin_left = -80.0
margin_top = -72.0
margin_right = 80.0
margin_bottom = -24.0
color = Color( 0.203922, 0.203922, 0.203922, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InfoDisplay" type="VBoxContainer" parent="."]
margin_left = -72.0
margin_top = -72.0
margin_right = 72.0
margin_bottom = 2.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WeaponName" type="Label" parent="InfoDisplay"]
margin_right = 144.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 1 )
text = "Dagger"

[node name="WeaponNormal" type="Label" parent="InfoDisplay"]
margin_top = 21.0
margin_right = 144.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 2 )
text = "Casts a pathetic ball of water at enemies"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WeaponEmpowered" type="Label" parent="InfoDisplay"]
margin_top = 34.0
margin_right = 144.0
margin_bottom = 43.0
custom_fonts/font = SubResource( 2 )
text = "Casts a less pathetic ball of water at enemies"
